name:                tasks-hs
version:             0.1.0.0
homepage:            https://github.com/ssipos90/tasks-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Sipos
maintainer:          sebastiansipos90@gmail.com
copyright:           2020 Sebastian Sipos
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/App.hs

executable tasks-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  other-modules:       App
  build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.4.6 && < 1.4.7
                      , protolude >= 0.2.3 && < 0.2.4
                      , text >= 1.2.3 && < 1.2.4
                      , bytestring >= 0.10.8.2 && < 0.11
                      , time > 1.8.0 && < 1.9
