name:                todos-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/todos-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/App.hs

executable todos-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       App
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2.3 && < 0.2.4
                     , text >= 1.2.3 && < 1.2.4
